fix bug/text align header title

--- a/client/src/components/Content/Content.css
+++ b/client/src/components/Content/Content.css
@@ -37,6 +37,7 @@ header h1 {
   margin-bottom: 0;
   justify-self: center;
   grid-column: span 4/ auto;
+  text-align: center;
 }
 
 .navigation {
